--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora 50%</title>
+    <title>Calculadora de Porcentagem</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora 50%</h1>
+        <h1>Cálculos PMZ</h1>
+        
         <div class="input-container">
             <input type="number" id="valor" placeholder="Digite o valor">
         </div>
+        
         <button onclick="calcular()">Calcular</button>
-        <div id="resultado" class="resultado">Resultado: </div>
+
+        <div id="resultados" class="resultados">
+            <!-- Aqui serão exibidos os resultados -->
+        </div>
     </div>
 
     <script src="index.js"></script>
