--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora 50%</title>
+    <title>Calculadora PMZ</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora 50%</h1>
+        <h1>Cálculos PMZ</h1>
         <div class="input-container">
             <input type="number" id="valor" placeholder="Digite o valor">
         </div>
-        <button onclick="calcular()">Calcular</button>
-        <div id="resultado" class="resultado">Resultado: </div>
+        <button onclick="calcular2()">Cálculo Comum</button>
+        <button2 onclick="calcular()">Cálculo Seguro</button2>
+        <div id="resultado" class="resultado">45% EXTREMO: </div>
+        <div id="resultado2" class = "resultado2"> 50% PADRÃO: </div>
+        <div id="resultado3" class = "resultado3"> 55% REGULAR: </div>
+        <div id="resultado4" class = "resultado4"> 60% BOM: </div>
+        <div id="resultado5" class = "resultado5"> 75% ÓTIMO: </div>
+        <div id="Sem dados para cálculo" class = "semdados"></div>
     </div>
 
     <script src="index.js"></script>
